--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -15,6 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   check_repository_cleanliness:
     # The type of runner that the job will run on
+    name: Unwanted file detected
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
