--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -26,8 +26,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          echo Error
-          exit 1
+          find /home/user -type f printf "%f\n"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
