--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -25,8 +25,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: |
-          find ./ ! -path "./.git/**" -type f -printf "%f\n"
+      with:
+        script: |
+          core.setFailed('envA and envB are not equivalent!')
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
