--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run a one-line script
         with:
           script: |
-            core.setFailed('envA and envB are not equivalent!')
+            console.log("lol")
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
