--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -21,13 +21,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-
+      - uses: actions/checkout@v3
       # Runs a single command using the runners shell
       - name: Run a one-line script
-      - uses: actions/checkout@v3
-        with:
-          script: |
-            console.log("lol")
+        run: exit 1
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
