--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: exit 1
+        run: echo '::set-output name=SELECTED_COLOR::green'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
