--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -24,7 +24,10 @@ jobs:
       - uses: actions/checkout@v3
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo '::error file=name,title=lol::zebi'
+        run: |
+          for file in ./; do
+            echo "::error file=${file##*/},title=Unwanted file detected::${file##*/}"
+          done
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
