--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -25,8 +25,10 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          for file in ./; do
-            echo "::error file=${file##*/},title=Unwanted file detected::${file##*/}"
+          search_dir="."
+          for file in "$searchdir"/*
+          do
+            echo "::error file=${file},title=Unwanted file detected::${file}"
           done
 
       # Runs a set of commands using the runners shell
