--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -54,10 +54,10 @@ jobs:
           done
           
           if [[ ERROR -eq 1 ]]; then
-            echo "::error title=Checks if the repository is clean and void of any unwanted files (temp files, binary files, etc.)";
+            echo "::error title="Checks if the repository is clean and void of any unwanted files (temp files, binary files, etc.)"";
             exit 1;
           else
-            echo "::notice title=Checks if the repository is clean and void of any unwanted files (temp files, binary files, etc.)::Repository clean";
+            echo "::notice title="Checks if the repository is clean and void of any unwanted files (temp files, binary files, etc.)"::Repository clean";
           fi
             
 
