--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -54,7 +54,7 @@ jobs:
           done
           
           if [[ ERROR -eq 1 ]]; then
-            echo "::notice title=Checks if the repository is clean and void of any unwanted files (temp files, binary files, etc.)";
+            echo "::notice file=Dockerfile,line=1,col=5,endColumn=7::Missing semicolon";
             exit 1;
           else
             echo "::notice title="Checks if the repository is clean and void of any unwanted files (temp files, binary files, etc.)"::Repository clean";
