--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -55,6 +55,7 @@ jobs:
           
           if [[ ERROR -eq 1 ]]; then
             echo "::error title=Checks if the repository is clean and void of any unwanted files::Process completed with exit code 1";
+            exit 1;
           fi
             
 
