--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -54,8 +54,7 @@ jobs:
           done
           
           if [[ ERROR -eq 1 ]]; then
-            echo "::error title=Checks if the repository is clean and void of any unwanted files::Process completed with exit code 1";
-            exit 1;
+            echo "::error title=Checks if the repository is clean and void of any unwanted files::Process completed with exit code 1" && exit 1;
           fi
             
 
