--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -57,4 +57,19 @@ jobs:
           if [[ ERROR -eq 1 ]]; then
             exit 1;
           fi
-  
+
+  check_program_compilation:
+    name: Checks if the program compile with Makefile
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Compilation
+        run: |
+          timeout 120 make
+      
+      - name: Clean temporary files
+        run: |
+          make clean
+    
