--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -73,4 +73,15 @@ jobs:
       - name: Clean temporary files
         run: |
           make clean
+  
+  run_tests:
+    name: Runs tests
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Compilation with tests_run rule
+        run: |
+          timeout 120 make tests_run
     
