--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -77,6 +77,7 @@ jobs:
   run_tests:
     name: Runs tests
     runs-on: ubuntu-latest
+    needs: check_program_compilation
     
     steps:
       - uses: actions/checkout@v3
