--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -76,7 +76,7 @@ jobs:
           
       - name: Checks executables
         env:
-          EXECUTABLES: ${{ secrets.EXECUTABLES }}
+          EXECUTABLES: mona
         run: |
           echo $EXECUTABLES
   
