--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -75,8 +75,10 @@ jobs:
           make clean
           
       - name: Checks executables
+        with:
+          EXECUTABLES: ${{ secrets.EXECUTABLES }}
         env:
-          EXECUTABLES: mona
+          EXECUTABLES: ${{ secrets.EXECUTABLES }}
         run: |
           echo $EXECUTABLES
   
