--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -75,8 +75,9 @@ jobs:
           make clean
           
       - name: Checks executables
+        if: ${{ github.event_name == 'push' }}
         run: |
-          echo "${{ secrets.EXECUTABLES }}"
+          echo "ok"
   
   #lol
   run_tests:
