--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -75,7 +75,7 @@ jobs:
           make clean
           
       - name: Checks executables
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
           echo "ok"
   
