--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -93,3 +93,20 @@ jobs:
       - name: Compilation with tests_run rule
         run: |
           timeout 120 make tests_run
+
+  push_to_mirror:
+    name: Push to the mirror repository
+    runs-on: ubuntu-latest
+    #needs: run_test
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url:
+            $MIRROR_URL
+        env:
+          MIRROR_URL: ${{ secrets.MIRROR_URL }}    
