--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -107,6 +107,6 @@ jobs:
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url:
-            $MIRROR_URL
+            ${{ secrets.MIRROR_URL }}
         env:
           MIRROR_URL: ${{ secrets.MIRROR_URL }}    
