--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -97,7 +97,7 @@ jobs:
   push_to_mirror:
     name: Push to the mirror repository
     runs-on: ubuntu-latest
-    #needs: run_test
+    needs: run_test
 
     steps:
       - uses: actions/checkout@v3
